example/generic-exposer.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: genexposer-deployment
  labels:
    app: genexposer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: genexposer
  template:
    metadata:
      labels:
        app: genexposer
    spec:
      containers:
      - name: genexposer
        image: whiledo/genexposer-test@sha256:627217a1bad083a795ccd2fe306b10edd00ba6270749261b6897ef157ced0fa5
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: genexposer-service
spec:
  selector:
    app: genexposer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
