example/whoami-deployment.yaml
apiVersion: apps/v1beta2 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: whoami-deployment
  labels:
    app: whoami-pr987
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whoami-pr987
  template:
    metadata:
      labels:
        app: whoami-pr987
    spec:
      containers:
      - name: whoami
        image: emilevauge/whoami
        ports:
        - containerPort: 80
---
kind: Service
apiVersion: v1
metadata:
  name: whoami-pr987-public
spec:
  selector:
    app: whoami-pr987
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
